fixes for update form for vehicle

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <head th:replace="fragments :: head"></head>
 
-<body>
+<body style="background-color: #056273; color: white;">
   <header th:replace="fragments :: header"></header>
   <h1 th:text="'Hello and ' + ${welcome}"></h1>
   <footer th:replace="fragments :: footer"></footer>
